force-app/main/default/objects/ApontamentoDeHoras__c/ApontamentoDeHoras__c.object-meta.xml
<CustomObject>
    <label>Apontamento de Horas</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apontamentos de Horas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>