force-app/main/default/objects/ApontamentoDeHoras__c/fields/Data_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Data_Inicio__c</fullName>
    <formula>DATEVALUE(Inicio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Início</label>
    <type>Date</type>
</CustomField>