force-app/main/default/objects/ApontamentoDeHoras__c/fields/DescricaoPerfilDeAlocacao__c.field-meta.xml
<CustomField>
    <fullName>DescricaoPerfilDeAlocacao__c</fullName>
    <formula>PerfilDeAlocacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição Perfil de Alocação</label>
    <type>Text</type>
</CustomField>