force-app/main/default/objects/ApontamentoDeHoras__c/fields/DuracaoHoras__c.field-meta.xml
<CustomField>
    <fullName>DuracaoHoras__c</fullName>
    <formula>(Fim__c - Inicio__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duração (Horas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>