force-app/main/default/objects/ApontamentoDeHoras__c/fields/Fim__c.field-meta.xml
<CustomField>
    <fullName>Fim__c</fullName>
    <label>Fim</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>