force-app/main/default/objects/ApontamentoDeHoras__c/fields/HoraInicio__c.field-meta.xml
<CustomField>
    <fullName>HoraInicio__c</fullName>
    <label>Hora Início</label>
gfgfgfgfg
    <type>Text</type>
    <length>1300</length>
</CustomField>