force-app/main/default/objects/ApontamentoDeHoras__c/fields/Inicio__c.field-meta.xml
<CustomField>
    <fullName>Inicio__c</fullName>
    <label>Início</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>