force-app/main/default/objects/ApontamentoDeHoras__c/fields/JaEnviado__c.field-meta.xml
<CustomField>
    <fullName>JaEnviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Já Enviado</label>
    <type>Checkbox</type>
</CustomField>