force-app/main/default/objects/ApontamentoDeHoras__c/fields/MesAno__c.field-meta.xml
<CustomField>
    <fullName>MesAno__c</fullName>
    <label>Mês/Ano</label>
    <type>Text</type>
    <length>1300</length>
</CustomField>