force-app/main/default/objects/ApontamentoDeHoras__c/fields/PerfilDeAlocacao__c.field-meta.xml
<CustomField>
    <fullName>PerfilDeAlocacao__c</fullName>
    <label>Perfil de Alocação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>