force-app/main/default/objects/ApontamentoDeHoras__c/fields/ProjetoLookup__c.field-meta.xml
<CustomField>
    <fullName>ProjetoLookup__c</fullName>
    <label>ProjetoXDXDXDXD</label>
    <type>Lookup</type>
    <referenceTo>Projeto__c</referenceTo>
    <relationshipName>ProjetoLookup__r</relationshipName>
</CustomField>