force-app/main/default/objects/ApontamentoDeHoras__c/fields/TempoMinutos__c.field-meta.xml
<CustomField>
    <fullName>TempoMinutos__c</fullName>
    <formula>(Fim__c - Inicio__c) * 24 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo (Minutos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>