force-app/main/default/objects/ApontamentoDeHoras__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JaEnviado__c</columns>
    <columns>MesAno__c</columns>
    <columns>ProjetoLookup__c</columns>
    <columns>Inicio__c</columns>
    <columns>HoraInicio__c</columns>
    <columns>Fim__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>